--- a/AppDIONews/Controllers/NewsTableViewCell.xib
+++ b/AppDIONews/Controllers/NewsTableViewCell.xib
@@ -10,27 +10,27 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="669" id="KGk-i7-Jjw" customClass="NewsTableViewCell" customModule="AppDIONews" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="1037" height="669"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="245" id="KGk-i7-Jjw" customClass="NewsTableViewCell" customModule="AppDIONews" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="1037" height="800"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="1037" height="669"/>
+                <rect key="frame" x="0.0" y="0.0" width="1037" height="800"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="z1P-qs-qfl" userLabel="Stack View Root">
-                        <rect key="frame" x="32" y="23" width="973" height="623"/>
+                        <rect key="frame" x="12" y="12" width="1013" height="776"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="Zlf-zh-WEc" userLabel="Stack View Source">
-                                <rect key="frame" x="0.0" y="0.0" width="973" height="34"/>
+                                <rect key="frame" x="0.0" y="0.0" width="1013" height="34"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sicnoticias.pt" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tUg-UV-CPG">
-                                        <rect key="frame" x="0.0" y="0.0" width="973" height="14.333333333333334"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="1013" height="14.333333333333334"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SIC Notícias" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Avl-Bv-xJj">
-                                        <rect key="frame" x="0.0" y="18.333333333333336" width="973" height="15.666666666666664"/>
+                                        <rect key="frame" x="0.0" y="18.333333333333332" width="1013" height="15.666666666666668"/>
                                         <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
                                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -38,16 +38,16 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="k3u-cB-jLL" userLabel="Stack View Title">
-                                <rect key="frame" x="0.0" y="174.33333333333334" width="973" height="42.666666666666657"/>
+                                <rect key="frame" x="0.0" y="251.66666666666666" width="1013" height="42.666666666666657"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Encontrados túmulos com mais de 4.300 anos no Egito - SIC Notícias" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4HU-Sd-tfw">
-                                        <rect key="frame" x="0.0" y="0.0" width="973" height="21.666666666666668"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="1013" height="21.666666666666668"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                         <color key="textColor" red="0.0" green="0.51372549020000002" blue="0.56078431370000004" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Foram descobertas várias esculturas e uma múmia, considerada a mais antiga e completa do Egito." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JjL-Dd-7Er">
-                                        <rect key="frame" x="0.0" y="25.666666666666657" width="973" height="17"/>
+                                        <rect key="frame" x="0.0" y="25.666666666666629" width="1013" height="17"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="14"/>
                                         <color key="textColor" systemColor="systemGrayColor"/>
                                         <nil key="highlightedColor"/>
@@ -55,29 +55,26 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="ucz-qF-I0Z" userLabel="Stack View Contents">
-                                <rect key="frame" x="0.0" y="357" width="973" height="266"/>
+                                <rect key="frame" x="0.0" y="511.66666666666663" width="1013" height="264.33333333333337"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d4Q-Yj-arJ">
-                                        <rect key="frame" x="0.0" y="0.0" width="973" height="240"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="d4Q-Yj-arJ">
+                                        <rect key="frame" x="0.0" y="0.0" width="1013" height="240"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="240" id="Yzh-Er-cEr"/>
                                         </constraints>
                                     </imageView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="dXz-7x-TIu">
-                                        <rect key="frame" x="0.0" y="244" width="973" height="22"/>
+                                        <rect key="frame" x="0.0" y="244" width="1013" height="20.333333333333314"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="26/01/2023" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QRA-YP-oya">
-                                                <rect key="frame" x="0.0" y="0.0" width="947" height="22"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="26/01/2023" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QRA-YP-oya">
+                                                <rect key="frame" x="0.0" y="0.0" width="987.66666666666663" height="20.333333333333332"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                 <color key="textColor" systemColor="systemGrayColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="link" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="x8e-RA-Slj">
-                                                <rect key="frame" x="951" y="-3.5527136788005009e-15" width="22" height="22.333333333333336"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="22" id="0v5-be-lPo"/>
-                                                    <constraint firstAttribute="width" constant="22" id="qpc-FH-95g"/>
-                                                </constraints>
+                                                <rect key="frame" x="991.66666666666663" y="-3.5527136788005009e-15" width="21.333333333333371" height="20.666666666666671"/>
+                                                <color key="tintColor" red="0.0" green="0.51372549020000002" blue="0.56078431370000004" alpha="1" colorSpace="calibratedRGB"/>
                                             </imageView>
                                         </subviews>
                                     </stackView>
@@ -87,10 +84,10 @@
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="z1P-qs-qfl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="12" id="GFx-Dl-V1w"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="z1P-qs-qfl" secondAttribute="bottom" constant="12" id="bD5-Rv-L0Y"/>
-                    <constraint firstItem="z1P-qs-qfl" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="12" id="qho-pE-y72"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="z1P-qs-qfl" secondAttribute="trailing" constant="12" id="vfU-s1-oTz"/>
+                    <constraint firstItem="z1P-qs-qfl" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="XWs-8A-Zi1"/>
+                    <constraint firstItem="z1P-qs-qfl" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="cYS-6U-Qrt"/>
+                    <constraint firstAttribute="trailing" secondItem="z1P-qs-qfl" secondAttribute="trailing" constant="12" id="p6W-f1-C1q"/>
+                    <constraint firstAttribute="bottom" secondItem="z1P-qs-qfl" secondAttribute="bottom" constant="12" id="zFM-Z2-JN2"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
